new pager added

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="media_project1.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- a title -->
     <title>project 1</title>
 </head>
 <body>
@@ -18,7 +20,7 @@
           <nav class="desktop">
             <ul>
               <li><a href="#">Product detail</a></li>
-              <li><a href="#">About us</a></li>
+              <li><a href="about.html">About us</a></li>
               <li><a href="" target="_blank">Follow us <img class="icon" src="./asset/images/instagram.png"></a></li>
               <li><a href="#" class="button">Join us</a></li>
             </ul>
