new pager added

--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
 
           <nav class="desktop">
             <ul>
-              <li><a href="#">Product detail</a></li>
+              <li><a href="index.html">Product detail</a></li>
               <li><a href="#">About us</a></li>
               <li><a href="" target="">Follow us <img class="icon" src="./asset/images/instagram.png"></a></li>
               <li><a href="#" class="button">Join us</a></li>
