--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
               <li><a href="#" class="button">Join us</a></li>
             </ul>
           </nav>
+          <nav class="mobile">
+            <ul>
+              <li><a href="#"><img src="./asset//images/ic-logo.svg"></a></li>
+              <li><a href="#"><img src="./asset//images/ic-product-detail.svg"></a></li>
+              <li><a href="#"><img src="./asset//images/ic-about-us.svg"></a></li>
+              <li><a href="#" class="button">Join us</a></li>
+            </ul>
+          </nav>
           
         </div>
       </header>
