--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
           <nav class="desktop">
             <ul>
               <li><a href="index.html">Product detail</a></li>
-              <li><a href="about.html">About us</a></li>
+              <li><a href="about.css">About us</a></li>
               <li><a href="" target="_blank">Follow us <img class="icon" src="./asset/images/instagram.png"></a></li>
               <li><a href="#" class="button">Join us</a></li>
             </ul>
           </nav>
           <nav class="mobile">
             <ul>
-              <li><a href="#"><img src="./asset//images/ic-logo.svg"></a></li>
-              <li><a href="#"><img src="./asset//images/ic-product-detail.svg"></a></li>
-              <li><a href="#"><img src="./asset//images/ic-about-us.svg"></a></li>
+              <li><a href="/index.html"><img src="./asset/images/ic-logo.svg"></a></li>
+              <li><a href="/about.html"><img src="./asset/images/ic-product-detail.svg"></a></li>
+              <li><a href="#"><img src="./asset/images/ic-about-us.svg"></a></li>
               <li><a href="#" class="button">Join us</a></li>
             </ul>
           </nav>
