--- a/about.html
+++ b/about.html
@@ -27,8 +27,8 @@
       </nav>
       <nav class="mobile">
         <ul>
-          <li><a href="/index.html"><img src="./asset/images/ic-logo.svg"></a></li>
-          <li><a href="/about.html"><img src="./asset/images/ic-product-detail.svg"></a></li>
+          <li><a href="index.html"><img src="./asset/images/ic-logo.svg"></a></li>
+          <li><a href="about.html"><img src="./asset/images/ic-product-detail.svg"></a></li>
           <li><a href="#"><img src="./asset/images/ic-about-us.svg"></a></li>
           <li><a href="#" class="button">Join us</a></li>
         </ul>
