--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 
           <nav class="desktop">
             <ul>
-              <li><a href="/index.html">Product detail</a></li>
-              <li><a href="/about.html">About us</a></li>
-              <li><a href="" target="_blank">Follow us <img class="icon" src="./asset/images/instagram.png"></a></li>
+              <li><a  class="one" href="/index.html">Product detail</a></li>
+              <li><a class="two" href="/about.html">About us</a></li>
+              <li><a  class="three" href="" >Follow us  <img class="icon" src="./asset/images/instagram.png"></a></li>
               <li><a href="#" class="button">Join us</a></li>
             </ul>
           </nav>
